# chip8

./: Cargo.toml  LICENSE  README.md
crates/chip8/: Cargo.toml
crates/chip8/src/: chip8.rs  clock.rs  graphics.rs  input.rs  memory.rs  processor.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: app.rs  audio.rs  fragment.glsl  gui.rs  main.rs  renderer.rs  vertex.glsl
