[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["jpglain"]

[dependencies]
chip8 = { path = "../chip8" }
log = "0.4"
fern = "0.6"
rfd = "0.9"
cpal = "0.13"
bincode = "1.3"
anyhow = "1.0.59"
eframe = { git = "https://github.com/emilk/egui", rev = "eeae485629fca24a81a7251739460b671e1420f7", default-features = false, features = [
    "glow",
    "default_fonts",
] }

[profile.release]
strip = true
lto = "thin"
